# scrob

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  scrob-gui.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: continuous.yml
config/src/: lib.rs
scrob-cli/: Cargo.toml  cli.rs
scrob-cli/src/: main.rs
scrob-cli/src/gui/: main.rs
scrob-core/: Cargo.toml
scrob-core/src/: core.rs  lib.rs
scrob-core/src/integrations/: base.rs  discord.rs  lastfm.rs  mod.rs  notification.rs
scrob-core/src/mb/: mod.rs  search.rs
scrob-core/src/player/: mod.rs  player_unix.rs  player_windows.rs
scrob-gui/: Cargo.toml  main.go
scrob-gui-lib/: Cargo.toml
scrob-gui-lib/src/: lib.rs
scrob-gui/src/: main.rs
scrob-web/: Cargo.toml
scrob-web/src/: main.rs
types/: Cargo.toml
types/src/: config.rs  integrations.rs  lib.rs  song.rs
web/: .gitignore  LICENSE  README.md  go.mod  go.sum  package.json  tsconfig.json  webpack.config.js
web/.github/workflows/: build.yml
web/src/: api.ts  auth.ts  html.ts  index.ts  types.ts  utils.ts  ws.ts
web/static/css/: common.css
web/templates/: base.html  index.stage.html  navbar.html
