[package]
name = "scrob-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"

log = "0.4.14"
async-trait = "0.1.21"
futures = "0.3"
env_logger = "0.9.0"
clap = { version = "2.34.0", features = ["suggestions", "color"] }
confy = "0.4.0"
dialoguer = "0.10.0"


config = { path = "../config" }
scrob-core = { path = "../scrob-core" }
types = { path = "../types" }

