[package]
name = "scrob-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"

log = "0.4.14"
async-trait = "0.1.21"
futures = "0.3"
env_logger = "0.9.0"
confy = "0.4.0"
ws = "0.9.2"
rocket = "0.4"


config = { path = "../config" }
scrob-core = { path = "../scrob-core" }
types = { path = "../types" }

[lib]
crate-type=["rlib", "cdylib"]
